syntax = "proto3";

option go_package = "jikkaem/internal/proto";

service User {
  rpc GetUserByID (ID) returns (UserObject) {}
  rpc CreateUser (UserObject) returns (UserObject) {}
  rpc DeleteUser (ID) returns (UserObject) {}
}

message UserObject {
  string id = 1;
  string name = 2;
  string email = 3;
}

message ID {
    string id = 1;
}
